some little fixes

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                     const span = document.createElement('span');
                     span.innerHTML = " 💖"
-/*                     img.alt = `${img.alt + span}`;
- */                    img.parentNode.insertBefore(span, img.nextSibling);
+                    // img.alt = `${img.alt + span}`;
+                    img.parentNode.insertBefore(span, img.nextSibling);
                 </script>
             </div>
 
